...
    <string name="splash_footer_text">Please do not trust us.\nIt is not necessary</string>

    <string name="Contacts">Contacts</string>
    <string name="item_image">Item image</string>
    <string name="contact_name">Contact name</string>
...
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
...

    <string name="headline_add_contact">Add contact</string>
    <string name="headline_add_identity">Add identity</string>
    <string name="headline_contacts">Contacts</string>
    <string name="headline_identities">Identities</string>
...
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
...
    <string name="dialog_headline_please_wait">Please wait</string>
    <string name="dialog_message_server_communication_is_running">Server communication is running</string>
    <string name="headline_create_box_account">Create Qabel account</string>
    <string name="server_access_not_successfully_retry_question">Server access failed. Do you want to retry?</string>
    <string name="no">No</string>
...
    <string name="direct_input">Manual input</string>

    <string name="contact_import_failed">Contact import failed</string>
    <string name="contact_import_manual_failed">Contact import failed. Please check if you entered the correct data</string>

...
    <string name="message_welcome_screen3">Qabel allows you to depict\nmany identities with\nonly one account.\n\nYou can sync different\nidentities on different\ndevices and choose which\nidentities you want to\nshare with other people.\n\nBe Bob for your boss and\nAlice for your friends!</string>
    <string name="message_welcome_screen4">We give you 2 GB\nof free storage\n\nCreate your Qabel\naccount now.</string>
    <string name="message_welcome_disclaimer_headline">\u0020License Stuff\n</string>
    <string name="message_welcome_disclaimer_message_legal_note">You have to agree\nto our legal notes</string>
    <string name="btn_welcome_disclaimer_show_legal_notes">Show Terms of Service</string>

    <string name="cb_welcome_disclaimer_legal_note_checked">Terms of Service Accepted</string>
    <string name="cb_welcome_disclaimer_legal_note_unchecked">Accept Terms of Service </string>
    <string name="cb_welcome_disclaimer_privacy_note_checked">Privacy Notes Accepted</string>
    <string name="cb_welcome_disclaimer_privacy_note_unchecked">Accept Privacy Notes</string>

    <string name="message_welcome_disclaimer_message_privacy_note">and to our\nPrivacy Notes</string>
...
    <string name="btn_welcome_disclaimer_show_sources_on_github">Show Sources on GitHub</string>
    <string name="btn_welcome_disclaimer_show_qapl">Show QAPL</string>
    <string name="btn_welcome_back">Back</string>
    <string name="btn_welcome_skip">Skip</string>
    <string name="btn_welcome_accept">Accept</string>
    <string name="message_welcome_qabel_big">QABEL </string>
    <string name="headline_welcome_screen1">Welcome to\u0020</string>
    <string name="empty_text" translatable="false" />
    <string name="headline_welcome_screen2">\u0020Features\n</string>
    <string name="headline_welcome_screen3">\u0020Identities\n</string>
    <string name="headline_welcome_screen4">\u0020Account\n</string>
    <string name="github_url" translatable="false">https://github.com/Qabel</string>
    <string name="asset_qabel_font" translatable="false">fonts/Art Post.ttf</string>
...
    <string name="action_tellafriend">Invitation</string>

    <string name="cant_import_file_type_is_unknown">Can\'t import file. The file type is unknown</string>
    <string name="idenity_imported">Identity successfully imported</string>
    <string name="shared_with_you">shared with you</string>
    <string name="no_connection">No Connection</string>
...
