<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/padding_welcome_text_top"
              android:background="@color/bg_welcome_semitransparent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_welcome_text_top">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <de.qabel.qabelbox.ui.views.TextViewQabelFont
                    android:id="@+id/headline2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="left"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/message_welcome_qabel_big"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_qabel_logo"
                    android:textStyle="normal"/>

                <de.qabel.qabelbox.ui.views.TextViewFont
                    android:id="@+id/headline1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="left"
                    android:text="@string/message_welcome_disclaimer_headline"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_welcome_header"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <de.qabel.qabelbox.ui.views.TextViewFont
                    android:id="@+id/welcome_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="left"
                    android:text="@string/message_welcome_disclaimer_message_legal_note"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_welcome_screen"
                    android:textStyle="normal"/>
                <!--legal notes-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.qabel.qabelbox.ui.views.ButtonFont
                        android:id="@+id/btn_show_legal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginTop="@dimen/padding_welcome_text_top"
                        android:gravity="center"
                        android:text="@string/btn_welcome_disclaimer_show_legal_notes"/>

                    <de.qabel.qabelbox.ui.views.CheckBoxFont
                        android:id="@+id/cb_welcome_legal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cb_welcome_disclaimer_legal_note_unchecked"
                        android:textColor="@color/white"/>


                    <!--data policy-->

                    <de.qabel.qabelbox.ui.views.ButtonFont
                        android:id="@+id/btn_show_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/textsize_bottom_ab"
                        android:gravity="center"
                        android:text="@string/btn_welcome_disclaimer_show_privacy_notes"/>

                    <de.qabel.qabelbox.ui.views.CheckBoxFont
                        android:id="@+id/cb_welcome_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cb_welcome_disclaimer_privacy_note_unchecked"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="@dimen/padding_welcome_text_top"
                android:gravity="left"
                android:orientation="horizontal">

                <de.qabel.qabelbox.ui.views.TextViewQabelFont
                    android:id="@+id/welcome_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="left"
                    android:text="@string/message_welcome_qabel_big"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textSize="@dimen/textsize_qabel_logo"
                    android:textStyle="normal"/>

                <de.qabel.qabelbox.ui.views.TextViewFont
                    android:id="@+id/welcome_text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:gravity="left"

                    android:text="@string/message_welcome_disclaimer_qabel_is_public_source"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_welcome_screen"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_show_qabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:paddingBottom="@dimen/padding_welcome_text_top">

                <de.qabel.qabelbox.ui.views.ButtonFont
                    android:id="@+id/btn_show_qapl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/btn_welcome_disclaimer_show_qapl"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
