...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomActionBar">


        <de.qabel.qabelbox.ui.views.ViewPagerParallax
            android:id="@+id/pager"
            xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <de.qabel.qabelbox.ui.views.IconPageIndicator
...
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="right|top"
            android:id="@+id/btn_show_sources"
            android:src="@drawable/welcome_github_beta"/>
    </FrameLayout>


</RelativeLayout>

